Support pseudo elements after ::slotted.

*** Not for landing as this is not yet resolved/spec'ed. ***

Allow pseudo elements after ::slotted() pseudo elements to allow scopes
to which an element has been slotted to generate/style pseudo elements.

This patch is very admissive in that it allows almost any pseudo
element. The exceptions are ::slotted() itself to avoid selectors like
::slotted(*)::slotted(*), and ::content/::shadow from Shadow DOM V0.

Bug: 754081
Change-Id: I95d91ea06d8fa75537cf8c845da477b2fb034a7d